# ChromeExtensionSetupTool

./: README.md
JS Project/: main.js  package-lock.json  package.json
Rust Project/: Cargo.toml  Readme.txt
Rust Project/src/: main.rs
VS Project/: GCExtensionInstaller.sln
VS Project/GCExtensionInstaller/: GCExtensionInstaller.cpp  GCExtensionInstaller.rc  GCExtensionInstaller.vcxproj  GCExtensionInstaller.vcxproj.filters  config.h  resource.h  stdafx.cpp  unzipper.cpp  unzipper.h  utils.cpp  utils.h
VS Project/GCExtensionUninstaller/: GCExtensionUninstaller.cpp  GCExtensionUninstaller.rc  GCExtensionUninstaller.vcxproj  GCExtensionUninstaller.vcxproj.filters  resource.h  stdafx.cpp
